# claude-voice

./: .gitignore  .pre-commit-config.yaml  .ruffignore  CLAUDE.md  Makefile  README.md  claude-voice  claude_voice.py  pyproject.toml  requirements.txt  setup_16khz_device.sh
.context/: README.md
.context/.claude/: settings.json
tests/: __init__.py  test_audio.py  test_audio_resampling.py  test_claude_client.py  test_config.py  test_esc_cancellation.py  test_goodbye_detection.py  test_interface.py  test_json_session_management.py  test_profile_display.py  test_profiles.py  test_sample_rate.py  test_session_display.py  test_session_management.py  test_startup_session_display.py  test_transcriber_numbers.py  test_tts.py  test_tts_interruption.py  test_tts_interruption_threading.py  test_tts_output_suppression.py  test_verbose_mode.py  test_voice_assistant.py
voice_assistant/: __init__.py
voice_assistant/audio/: __init__.py  player.py  recorder.py  resampler.py
voice_assistant/config/: __init__.py  settings.py
voice_assistant/core/: __init__.py  claude_client.py  interface.py
voice_assistant/profiles/: __init__.py  manager.py
voice_assistant/transcription/: __init__.py  whisper.py
voice_assistant/tts/: __init__.py  base.py  coqui.py  factory.py  piper.py
